--- a/home.html
+++ b/home.html
@@ -10,19 +10,28 @@
 	<div class="row">
 		<div class="col-xs-6">
 		</div>
-		<div class="col-xs-3">
+		<div class="col-xs-1">
 			<a href="#">Username</a>
 		</div>
 		<div class="col-xs-3">
+			<a href="#">Add a post</a>
+		</div>
+		<div class="col-xs-2">
 			<a href="#">Sign out</a>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-9">
-			<h1>Notices</h1>
+			<h1 class="">Notices</h1>
 			<div class="">
-				<h3>Title</h3>
-				<p>This constututes of the contents for the Notice board</p>
+				<table>
+					<tr>
+						<th>This is the header</th>
+					<tr>
+					<tr>
+						<td>This is the content for the notice</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 		<div class="col-xs-3">
