I have added the post notice page and the post page

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 			<a href="#">Username</a>
 		</div>
 		<div class="col-xs-3">
-			<a href="#">Add a post</a>
+			<a href="addpost.html">Add a post</a>
 		</div>
 		<div class="col-xs-2">
 			<a href="#">Sign out</a>
